syntax= "proto3";

package news;
option go_package = "news-service/pb";

service NewsService {
    rpc GetNews(NewsRequest) returns (NewsResponse);
}

message NewsRequest {
    string source = 1 ;
}

message NewsItem {
  string article_id = 1;
  string title = 2;
  string description = 3;
  string link = 4;
  string ImageURl = 5;
  string published_at = 6;
  string source = 7;
}

message NewsResponse {
    repeated NewsItem items = 1;
}